--- a/debian/rules
+++ b/debian/rules
@@ -10,8 +10,9 @@ include /usr/share/cdbs/1/class/cmake.mk
 DEB_CMAKE_EXTRA_FLAGS = \
     -DALPS_BUILD_APPLICATIONS:BOOL=ON \
     -DALPS_ENABLE_OPENMP:BOOL=ON \
-    -DALPS_BUILD_FORTRAN:BOOL=OFF \
-    -DCMAKE_Fortran_FLAGS:STRING=-fopenmp
+    -DALPS_BUILD_FORTRAN:BOOL=ON \
+    -DCMAKE_Fortran_FLAGS:STRING=-fopenmp \
+    -DALPS_BUILD_TESTS=OFF -DALPS_BUILD_EXAMPLES=OFF
 
 #  Linker flags for reduce binary size
 DEB_CMAKE_EXTRA_FLAGS += \
