--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,9 @@ Source: alps
 Section: non-free
 Priority: extra
 Maintainer: Ryo IGARASHI <rigarash@issp.u-tokyo.ac.jp> and Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>
-Build-Depends: cdbs, debhelper (>= 7.0.50~), cmake,
- libboost-date-time-dev (>= 1.47.0), libboost-filesystem-dev (>=
- 1.47.0), libboost-mpi-dev (>= 1.47.0), libboost-program-options-dev
- (>= 1.47.0), libboost-python-dev (>= 1.47.0), libboost-regex-dev (>=
- 1.47.0), libboost-serialization-dev (>= 1.47.0), libboost-system-dev
- (>= 1.47.0), libboost-thread-dev (>= 1.47.0), libhdf5-serial-dev |
- libhdf5-dev, mpi-default-dev, libsqlite3-dev, python-matplotlib,
- liblapack-dev, gfortran
+Build-Depends: cdbs, debhelper, cmake, libboost-al-dev, libhdf5-serial-dev | libhdf5-dev, mpi-default-dev, libsqlite3-dev, python-matplotlib, liblapack-dev, gfortran
 Standards-Version: 3.9.1
 Homepage: http://alps.comp-phys.org/
-Vcs-Svn: https://rigarash@alps.comp-phys.org/svn/alps1/trunk/alps
 Vcs-Browser: https://alps.comp-phys.org/trac/browser
 
 Package: task-alps
