--- a/debian/rules
+++ b/debian/rules
@@ -21,4 +21,4 @@ DEB_CMAKE_EXTRA_FLAGS += \
     -DCMAKE_EXE_LINKER_FLAGS="-Wl,--as-needed"
 
 # Allow parallel builds
-DEB_BUILD_PARALLEL = yes
+# DEB_BUILD_PARALLEL = yes
