--- a/debian9/rules
+++ b/debian9/rules
@@ -12,8 +12,7 @@ DEB_CMAKE_EXTRA_FLAGS = \
     -DALPS_ENABLE_OPENMP:BOOL=ON \
     -DALPS_BUILD_FORTRAN:BOOL=ON \
     -DCMAKE_Fortran_FLAGS:STRING=-fopenmp \
-    -DALPS_BUILD_TESTS=OFF -DALPS_BUILD_EXAMPLES=OFF \
-    -DPYTHON_INTERPRETER=/usr/bin/python3
+    -DALPS_BUILD_TESTS=OFF -DALPS_BUILD_EXAMPLES=OFF
 
 #  Linker flags for reduce binary size
 DEB_CMAKE_EXTRA_FLAGS += \
